--- a/helpline.html
+++ b/helpline.html
@@ -13,7 +13,7 @@
     
     <h1>Helpline</h1>
     <hr/>
-    <img src="rescue123.jpeg" width="100%" height="400px">
+    <div class="container2"><img src="rescue123.jpeg" class="prepare2" ></div>
     <hr/>
     <h2>Contact</h2>
     <ul>
