--- a/shelter.html
+++ b/shelter.html
@@ -13,7 +13,8 @@
       </svg></a>
     <h1>Shelter</h1>
     <hr/>
-    <img src="shelter.jpg" width="100%" height="500">
+    <div class="cotainer2"><img class="prepare2" src="shelter.jpg" ></div>
+   
     <hr/>
     <h2>Types of shelter</h2>
     <ul>
