--- a/alert.html
+++ b/alert.html
@@ -12,16 +12,16 @@
         <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"></path>
       </svg></a>
     <section id="alerts">
-        <h2>Real-Time Alerts</h2>
+        <h2 class="black">Real-Time Alerts</h2>
         <p>Get up-to-date alerts and warnings about impending disasters.</p>
         <div id="alerts-map">
-            <h3>Interactive Map</h3>
+            <h3 class="black">Interactive Map</h3>
             <iframe src="https://www.google.com/maps/embed?..." width="100%" height="450"></iframe>
         </div>
         <div id="localized-content">
-            <h3>Localized Content</h3>
+            <h3 class="black">Localized Content</h3>
             <p>Enter your location to receive specific disaster information.</p>
-            <input type="text" id="location-input" placeholder="Enter your city or zip code">
+            <input type="text" id="location-input" placeholder="Enter your city ">
             <button id="get-info-btn">Get Info</button>
             <div id="location-info"></div>
         </div>
