--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
         
         <!-- <a href="new.html" class="but">Home</a>   -->
         <h1>Natural Disasters:What to do before,during and after</h1><br/>
-        <img class="education" src="disaster12.jpg" />
+        <div class="container"><img class="education" src="disaster12.jpg" /></div>
         <hr />
         <br />
         <h4 class="font">
@@ -53,7 +53,8 @@
             <li>LandSlides</li>
           </ul>
         <h1>Be prepared: Bag with the most important</h1><br/>
-        <img class="prepare" src="Beprepared.jpg">
+        <div class="container"><img class="prepare" src="Beprepared.jpg"></div>
+        
         <hr/>
         <p>In view of the various changes that have occurred on the Earth today, it is necessary to be prepared for any probability of natural disaster that may occur
 
@@ -79,7 +80,7 @@
             <li>Personal and household documents packed in a plastic bag.</li></ul>
 
             <h1>Identifies the safe places in case of natural disaster</h1><br/>
-            <img class="prepare" src="safe.jpg">
+            <div class="container"><img class="prepare" src="safe.jpg"></div>
             <hr/>
             <br/>
             <p>Another important aspect to consider, before a natural disaster occurs, is to identify the spaces in your home that offer the most protection and allow you to take shelter with your family.</p><br/>
